--- a/eliza/index.html
+++ b/eliza/index.html
@@ -203,19 +203,30 @@
                     </section>
 
                     <section v-if="humanPlayer.actionStep === '30'">
-                        <a href="#" v-on:click="prevSetHumanAction()">< Go Back</a>
+                        <a href="#" v-on:click="prevDevelopAction()">< Go Back</a>
                         <p class="action-header">Which industries are you developing (choose up to two)?<br /><span class="action-message">Below are the top 2 tiles of each type of developable industry on your board.</span></p>
                         <section v-for="industry in this.humanPlayer.nextAction.actiondata.developabletiles">
                             <span class="highlight-text">{{ industry.industrytypename }}</span>
                             <ul class="cards">
                                 <li class="card card--clickable card--no-padding" v-for="tile in industry.tiles">
                                     <label style="display: flex; padding: 0.5rem;">
-                                        <input type="checkbox" />&nbsp;
+                                        <input type="checkbox" v-model="tile.selected" />&nbsp;
                                         <span style="margin-left: 0.5rem;">{{ tileToString(tile.developabletile) }}</span>
                                     </label>
                                 </li>
                             </ul>
                         </section>
+                    </section>
+                    
+                    <section v-if="humanPlayer.actionStep === '32'">
+                        <a href="#" v-on:click="prevDevelopActionConfirm()">< Go Back</a>
+                        <p class="action-header" v-if="currentRound > 1 && humanPlayer.currentTurnIndex === 0">Confirm Your Action<br /><span class="action-message">Click 'Next' to confirm.</span></p>
+                        <p class="action-header" v-if="(currentRound === 1) || (currentRound > 1 && humanPlayer.currentTurnIndex === 1)">Complete Your Turn<br /><span class="action-message">Click 'Next' to confirm your <span v-if="currentRound > 1 && humanPlayer.currentTurnIndex === 1">second </span> action and complete your turn.</span></p>
+                        <ul>
+                            <li class="action-desc" v-for="action in getHumanActionDescription()">
+                                {{ action.actionDesc }}
+                            </li>
+                        </ul>
                     </section>
 
                     <section v-if="humanPlayer.actionStep === '02' || humanPlayer.actionStep === '12' || humanPlayer.actionStep === '31'">
