--- a/eliza/index.html
+++ b/eliza/index.html
@@ -185,7 +185,7 @@
                             <li class="card card--clickable card--no-padding" v-for="industrytile in this.humanPlayer.nextAction.actiondata.sellabletiles">
                                 <label style="display: flex; padding: 0.5rem;">
                                     <input type="checkbox" />&nbsp;
-                                    <span style="margin-left: 0.5rem;">{{ tileToString(industrytile.tile) }} on<br />{{ industrytile.name }} (Space {{ industrytile.spaceid }})</span>
+                                    <span style="margin-left: 0.5rem;">{{ tileToString(industrytile.tile) }} on<br />{{ industrytile.name }} (Space {{ industrytile.spaceid + 1 }})</span>
                                 </label>
                             </li>
                         </ul>
