--- a/eliza/index.html
+++ b/eliza/index.html
@@ -257,7 +257,7 @@
                     <ul class="simple-list">
                         <li class="action-desc" v-for="action in getAIActionDescription()">
                             <label style="display: flex; padding: 0.5rem;">
-                                <input type="checkbox" class="checkbox-strike" v-model="action.selected" />&nbsp;
+                                <input type="checkbox" class="checkbox-strike" />&nbsp;
                                 <span style="margin-left: 0.5rem;">
                             {{ action.actionDesc }}</span> </label>
                         </li>
